# usb_library_rp2040

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  main.c  usb.c  usb.h  usb_config.c  usb_config.h
tinyusb_comparison/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
utils/: usb_speed_test.py
